--- a/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Header Files\lua-api">
       <UniqueIdentifier>{3a426d16-05d5-47d8-89eb-5841dfd2b6fc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\lua-api">
+      <UniqueIdentifier>{95ab90b6-b56d-4bca-a1ea-1e6c6e3b03d0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\cg.h">
@@ -84,6 +87,9 @@
     <ClInclude Include="include\lua\Api.h">
       <Filter>Header Files\lua-api</Filter>
     </ClInclude>
+    <ClInclude Include="include\lua\LuaApplication.h">
+      <Filter>Header Files\lua-api</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application\Application.cpp">
@@ -103,6 +109,12 @@
     </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\LuaApplication.cpp">
+      <Filter>Source Files\lua-api</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\Api.cpp">
+      <Filter>Source Files\lua-api</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
