Add basic lua event handling

--- a/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
@@ -37,7 +37,7 @@
     <Filter Include="Header Files\lua-api">
       <UniqueIdentifier>{3a426d16-05d5-47d8-89eb-5841dfd2b6fc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\application\lua-api">
+    <Filter Include="Source Files\lua-api">
       <UniqueIdentifier>{95ab90b6-b56d-4bca-a1ea-1e6c6e3b03d0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -111,10 +111,10 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\lua\LuaApplication.cpp">
-      <Filter>Source Files\application\lua-api</Filter>
+      <Filter>Source Files\lua-api</Filter>
     </ClCompile>
     <ClCompile Include="src\lua\Api.cpp">
-      <Filter>Source Files\application\lua-api</Filter>
+      <Filter>Source Files\lua-api</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
